--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "framer-motion": "^7.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.36.1",
-    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.3",
     "swiper": "^8.4.2"
   },
   "devDependencies": {
